--- a/src/cypd.css
+++ b/src/cypd.css
@@ -57,9 +57,12 @@ body {
     --default-gray-color: rgb(163, 163, 163);
     --default-disabled-color: rgb(185, 185, 185);
     --default-disabled-background: rgb(231, 231, 231);
-    --default-red-color: rgb(255, 72, 72);
+    /* --default-red-color: rgb(255, 72, 72);
     --default-red-hover-color: rgb(255, 128, 128);
-    --default-red-active-color: rgb(255, 28, 28);
+    --default-red-active-color: rgb(255, 28, 28); */
+    --default-red-color: #b92454;
+    --default-red-hover-color: #d12b60;
+    --default-red-active-color: #a01f48;
     --default-deepgray-color: rgb(139, 139, 139);
     --default-lightblack-color: rgb(31, 31, 31);
     --default-transition-duration: 150ms;
@@ -123,14 +126,14 @@ body {
     position: fixed;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
 }
 
-.cypd-layout .header {
+.cypd-layout>.header {
     background-color: white;
     text-align: center;
     height: var(--default-header-height);
@@ -138,7 +141,7 @@ body {
     padding: 10px;
 }
 
-.cypd-layout .navigation {
+.cypd-layout>.navigation {
     background-color: var(--default-cyp-blue-active);
     height: var(--default-nav-height);
     width: 100%;
@@ -148,20 +151,12 @@ body {
     flex-wrap: wrap;
 }
 
-.cypd-layout .content {
+.cypd-layout>.content {
     display: flex;
-    height: var(--default-content-height);
+    height: 100%;
     overflow-y: auto;
     max-width: 100%;
 }
-
-
-/* 
-.cypd-layout-content:after {
-    content: '';
-    display: table;
-    clear: both;
-} */
 
 .cypd-layout .column {
     overflow: visible;
@@ -268,101 +263,6 @@ body {
     overflow: hidden;
     flex-grow: 1;
 }
-
-
-/* 
-.column.right {
-    margin-right: var(--default-right-collapser-width);
-    border-left: 1.3px solid rgb(153, 153, 153);
-}
-
-.column .cypd-layout-column-wrapper {
-    position: relative;
-    flex-grow: 2;
-    height: 100%;
-    z-index: 7;
-    transition: transform var(--default-transition-duration);
-    transition-delay: calc(var(--default-transition-duration) / 2);
-}
-
-.column.left .cypd-layout-column-wrapper {
-    transform: translateX(calc(-1 * var(--default-leftsider-width)));
-}
-
-.column.right .cypd-layout-column-wrapper {
-    transform: translateX(var(--default-rightsider-width));
-}
-
-.column .collapser {
-    position: absolute;
-    height: 60px;
-    top: calc(100% - 90px);
-    z-index: 5;
-    cursor: pointer;
-}
-
-.column.left .collapser {
-    width: var(--default-left-collapser-width);
-    right: calc(-1 * var(--default-left-collapser-width) + 1px);
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20px' height='60px' overflow='visible'><path d='M3 3 9 3 9 3 Q 12 3 12 6 12 6 12 54 Z' stroke='black' fill='black'/><path d='M12 54 Q 12 57 9 57 9 57 3 57 Z' stroke='black' fill='black'/><path d='M3 57 3 3 12 54 Z' stroke='black' fill='black'/><path d='M3 3 A 3 3, 0, 0, 1, 0 0 L 0 3 Z' stroke='black' fill='black'/><path d='M3 57 A 3 3, 0, 0, 0, 0 60 L 0 57 Z' stroke='black' fill='black'/><path d='M0 3 3 3 3 57 0 57 Z' stroke='black' fill='black'/><polyline points='3,24 3,36 8,30' fill='white'/></svg>");
-}
-
-.column.right .collapser {
-    width: var(--default-right-collapser-width);
-    left: calc(-1 * var(--default-right-collapser-width) + 1px);
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20px' height='60px' overflow='visible'><path d='M 6 3 Q 3 3 3 6 Z' stroke='black' fill='black'/><path d='M 3 6 3 54 Q 3 57 6 57 Z' stroke='black' fill='black'/><path d='M 3 6 6 57 6 3 Z' stroke='black' fill='black'/><path d='M12 3 A 3 3, 0, 0, 0, 15 0 L 15 3 Z' stroke='black' fill='black'/><path d='M12 57 A 3 3, 0, 0, 1, 15 60 L 15 57 Z' stroke='black' fill='black'/><path d='M15 3 15 57 6 57 6 3 Z' stroke='black' fill='black'/><polyline points='12,24 12,36 7,30' fill='white'/></svg>");
-}
-
-.column.left.visible {
-    width: var(--default-leftsider-width);
-    flex-shrink: 0;
-    transition-delay: calc(var(--default-transition-duration) / 2);
-}
-
-.column.right.visible {
-    width: var(--default-rightsider-width);
-    margin-left: var(--default-right-collapser-width);
-}
-
-.column.visible .cypd-layout-column-wrapper {
-    transform: none;
-    transition-delay: 0ms;
-} */
-
-
-/* 
-.column.middle {
-    flex-grow: 5;
-    overflow: hidden;
-    padding: 10px 10px 10px 10px;
-}
-
-.column.middle.collapsed {
-    transition-delay: calc(var(--default-transition-duration) / 2);
-}
-
-.cypd-layout-footer {
-    background-color: var(--default-cyp-blue-active);
-    text-align: center;
-    width: 100%;
-    height: var(--default-footer-height);
-}
-
-@media (max-width: 800px) {
-    .column {
-        position: absolute;
-        height: calc(100% - var(--default-header-height) - var(--default-nav-height));
-    }
-    .column.left {
-        z-index: 21;
-    }
-    .column.middle {
-        width: 100%;
-    }
-    .column .collapser {
-        top: calc(100% - var(--default-header-height) - var(--default-nav-height) - 90px);
-    }
-} */
 
 
 /* cypd table */
